--- a/MutiaJuliSafitri.html
+++ b/MutiaJuliSafitri.html
@@ -55,6 +55,7 @@
                         await swals.fire('Cie yang hari ini ultah &#128514;');
                         await swals.fire('Selamat ulang tahun!');
                         await swals.fire('Panjang umur & sehat selalu <3');
+                        await swals.fire('Jangan Malas, Apalagi Malas Sekolah WKWK &#129325;');
                         pilihwarna();
                     }            
                     mulai();
